Linked to tutorial in footer

--- a/hello/templates/hello/layout.html
+++ b/hello/templates/hello/layout.html
@@ -20,7 +20,7 @@
     {% endblock %}
     <hr/>
     <footer>
-        <p>© 2018</p>
+        <p>Based on <a href="https://code.visualstudio.com/docs/python/tutorial-django">this</a> tutorial</p>
     </footer>
 </div>
 </body>
